--- a/page/home/index.wxml
+++ b/page/home/index.wxml
@@ -45,9 +45,9 @@
       </view>
 
       <view class="page-section">
-        <view class="kind-list-item-hd" bindtap="kindToggle">
+        <view class="kind-list-item-hd">
           <view class="kind-list-text">我的巡检</view>
-          <view class="list-text">查看全部任务</view>
+          <view class="list-text" data-url="pages/all-work-project/all-work-project" bindtap="kindToggle">查看全部任务</view>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
         <view class="page-body-line"></view>
@@ -125,7 +125,7 @@
       <view class="page-section">
         <view class="kind-list-item-hd">
           <view class="kind-list-text">我的巡检</view>
-          <navigator class="list-text" url="pages/all-work-orders/all-work-orders">查看全部任务</navigator>
+          <navigator class="list-text" url="pages/all-work-project/all-work-project">查看全部任务</navigator>
           <image class="kind-list-img" src="/imgs/icon/arrow.png"></image>
         </view>
 
