--- a/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
+++ b/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
@@ -1,56 +1,83 @@
 <!-- 顶部tabbar -->
-<view class="top-tab flex-wrp flex-tab " >
-  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
+<view class="top-tab flex-wrp flex-tab ">
+  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:key="key" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
     {{itemName}}
   </view>
 </view>
-<!-- tabbar对应的内容 -->.
+<!-- tabbar对应的内容 -->
 <view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==0 ? '' : true}}">
-    <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="项目编号" footer="{{}}"></mp-cell>
-            <mp-cell value="项目名称" footer="{{}}"></mp-cell>
-            <mp-cell value="甲方" footer="{{}}"></mp-cell>
-            <mp-cell value="甲方负责人" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-            <mp-cell value="乙方" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-        </mp-cells>
-    </view>
+
   </view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="设备编号" footer="{{}}"></mp-cell>
-            <mp-cell value="设备名称" footer="{{}}"></mp-cell>
-            <mp-cell value="设备位置" footer="{{}}"></mp-cell>
-            <mp-cell value="报修人" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-        </mp-cells>
+      <mp-cells ext-class="my-cells">
+        <mp-cell value="项目编号" footer="{{}}"></mp-cell>
+        <mp-cell value="项目名称" footer="{{}}"></mp-cell>
+        <mp-cell value="故障程度" footer="{{}}"></mp-cell>
+        <mp-cell value="故障等级" footer="{{}}"></mp-cell>
+        <mp-cell value="故障类别" footer="{{}}"></mp-cell>
+        <mp-cell value="故障描述" footer="{{}}"></mp-cell>
+        <mp-cell value="设备编号" footer="{{}}"></mp-cell>
+        <mp-cell value="设备名称" footer="{{}}"></mp-cell>
+        <mp-cell value="设备位置" footer="{{}}"></mp-cell>
+        <mp-cell value="报修人" footer="{{}}"></mp-cell>
+        <mp-cell value="联系电话" footer="{{}}"></mp-cell>
+      </mp-cells>
     </view>
   </view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="故障程度" footer="{{}}"></mp-cell>
-            <mp-cell value="故障等级" footer="{{}}"></mp-cell>
-            <mp-cell value="故障类别" footer="{{}}"></mp-cell>
-            <mp-cell value="故障描述" footer="{{}}"></mp-cell>
-        </mp-cells>
     </view>
   </view>
-  <view class="ctnt2 placehold" hidden="{{currentNavtab==3 ? '' : true}}">
+  <view class="ctnt1 placehold" hidden="{{currentNavtab==3 ? '' : true}}">
     <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="单据状态" footer="{{}}"></mp-cell>
-            <mp-cell value="报修单号" footer="{{}}"></mp-cell>
-            <mp-cell value="审核人" footer="{{}}"></mp-cell>
-            <mp-cell value="审核意见" footer="{{}}"></mp-cell>
-            <mp-cell value="维修人员" footer="{{}}"></mp-cell>
-            <mp-cell value="计划时间" footer="{{}}"></mp-cell>
-            <mp-cell value="处理意见" footer="{{}}"></mp-cell>
-        </mp-cells>
+    </view>
+  </view>
+  <view class="ctnt2 placehold" hidden="{{currentNavtab==4 ? '' : true}}">
+    <view class="page__bd">
+      <mp-cells ext-class="my-cells">
+        <mp-cell value="单据状态" footer="{{}}"></mp-cell>
+        <mp-cell value="报修单号" footer="{{}}"></mp-cell>
+        <mp-cell value="审核人" footer="{{}}"></mp-cell>
+        <mp-cell value="审核意见" footer="{{}}"></mp-cell>
+        <mp-cell value="维修人员" footer="{{}}"></mp-cell>
+        <mp-cell value="计划时间" footer="{{}}"></mp-cell>
+        <mp-cell value="处理意见" footer="{{}}"></mp-cell>
+      </mp-cells>
     </view>
   </view>
 </view>
+<!-- 
+<view class='order_process'>
+  <view class='process_wrap' wx:for="{{processData}}" wx:key="">
+    <view class='process'>
+      <view class='process_line' style="background:{{item.start}}"></view>
+      <image class='process_icon' src="{{item.icon}}"></image>
+      <view class='process_line' style="background:{{item.end}}"></view>
+    </view>
+    <text class='process_name'>{{item.name}}</text>
+  </view>
+</view> -->
+
+  <view class="page-body">
+    <view class="page-section page-section-gap">
+
+      <view class="progress-box">
+        <progress percent="20" show-info stroke-width="3"/>
+      </view>
+
+      <view class="progress-box">
+        <progress percent="40" active stroke-width="3" />
+        <icon class="progress-cancel" type="cancel"></icon>
+      </view>
+
+      <view class="progress-box">
+        <progress percent="60" active stroke-width="3" />
+      </view>
+
+      <view class="progress-box">
+        <progress percent="80" color="#10AEFF" active stroke-width="3" />
+      </view>
+    </view>
+  </view>
