--- a/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
+++ b/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
@@ -60,7 +60,7 @@
   </view>
 </view> -->
 
-  <view class="page-body">
+  <!-- <view class="page-body">
     <view class="page-section page-section-gap">
 
       <view class="progress-box">
@@ -80,4 +80,4 @@
         <progress percent="80" color="#10AEFF" active stroke-width="3" />
       </view>
     </view>
-  </view>
+  </view> -->
