--- a/page/home/pages/terminalUser/inspectionToBeConfirm/inspectionToBeConfirm.wxml
+++ b/page/home/pages/terminalUser/inspectionToBeConfirm/inspectionToBeConfirm.wxml
@@ -1,17 +1,17 @@
 <view class="page">
-    <view class="page__bd">
-      <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+  <view class="page__bd">
+          <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
         <mp-cells>
-            <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" bindtap="clickOrder">
+            <mp-cell wx:for="{{inspectionList}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" bindtap="clickInspection">
                 <view slot="title" style="position: relative;margin-right: 10px;">
-                  <image src="../../../../../imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
+                  <image src="/imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
                 </view>
-                <view>{{order.programName}}</view>
-                <view>{{order.deviceName}}</view>
-                <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
-                <view style="font-size: 13px;color: #888888;">报修时间:{{order.malfunctionDate}}</view>
+                <view>{{order.taskName}}</view>
+                <view>每{{order.frequency}}天</view>
+                <view style="font-size: 13px;color: #888888;">开始时间:{{order.scheduledStartTime}}</view>
+                <view style="font-size: 13px;color: #888888;">计划时间:{{order.days}}天</view>
             </mp-cell>
         </mp-cells>
       </scroll-view>
-    </view>
+  </view>
 </view>
