--- a/page/home/pages/terminalUser/toBeCheckOrderDetail/toBeCheckOrderDetail.wxml
+++ b/page/home/pages/terminalUser/toBeCheckOrderDetail/toBeCheckOrderDetail.wxml
@@ -1,6 +1,6 @@
 <!-- 顶部tabbar -->
 <view class="top-tab flex-wrp flex-tab ">
-  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
+  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:key="itemName" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
     {{itemName}}
   </view>
 </view>
