--- a/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxml
@@ -1,25 +1,12 @@
 <!-- 顶部tabbar -->
 <view class="top-tab flex-wrp flex-tab " >
-  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
+  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:key="itemName" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
     {{itemName}}
   </view>
 </view>
 <!-- tabbar对应的内容 -->.
 <view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==0 ? '' : true}}">
-    <view class="page__bd">
-        <mp-cells ext-class="my-cells">
-            <mp-cell value="项目编号" footer="{{}}"></mp-cell>
-            <mp-cell value="项目名称" footer="{{}}"></mp-cell>
-            <mp-cell value="甲方" footer="{{}}"></mp-cell>
-            <mp-cell value="甲方负责人" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-            <mp-cell value="乙方" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-        </mp-cells>
-    </view>
-  </view>
-  <view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
         <mp-cells ext-class="my-cells">
             <mp-cell value="设备编号" footer="{{}}"></mp-cell>
@@ -30,13 +17,20 @@
         </mp-cells>
     </view>
   </view>
-  <view class="ctnt1 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
+  <view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
         <mp-cells ext-class="my-cells">
             <mp-cell value="故障程度" footer="{{}}"></mp-cell>
             <mp-cell value="故障等级" footer="{{}}"></mp-cell>
             <mp-cell value="故障类别" footer="{{}}"></mp-cell>
             <mp-cell value="故障描述" footer="{{}}"></mp-cell>
+        </mp-cells>
+    </view>
+  </view>
+  <view class="ctnt1 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
+    <view class="page__bd">
+        <mp-cells ext-class="my-cells">
+          
         </mp-cells>
     </view>
   </view>
