--- a/page/home/pages/terminalUser/toBeCommentOrderDetail/toBeCommentOrderDetail.wxss
+++ b/page/home/pages/terminalUser/toBeCommentOrderDetail/toBeCommentOrderDetail.wxss
@@ -1,41 +1,38 @@
-.comment1-description{
-  padding:30rpx 0;
-  display:flex;
-  flex-direction:row;
-}
-.stars{
-    background:url(../../../imgs/others/star@grey.png);
-    width: 50rpx;
-    height: 50rpx;
-    background-size: 50rpx 50rpx;
-    margin-left: 30rpx;
-    transition: 600ms;
-}
-.on{
-    background:url("http://外链图片地址/Xin.png（正常）");
-    width: 50rpx;
-    height: 50rpx;
-    background-size: 50rpx 50rpx;
-    transition: 1s;
-    transform: scale(1,1)
-}
-.weui-cells_after-title{
-  width: 92%;
-  margin:0 auto;
-  border:1px solid #ddd;
+.comment1-description {
+  padding: 30rpx 0;
+  display: flex;
+  flex-direction: row;
 }
 
-.btnSf{
+.weui-cells_after-title {
   width: 92%;
-  margin:30rpx auto;
-  
-}
-.btnSf button{
-    background: #57B6BA;
-    color: #fff;
+  margin: 0 auto;
+  border: 1px solid #ddd;
 }
 
-.btnSf button:active{
-  background: #5BC2C6;
+.btnSf {
+  width: 92%;
+  margin: 30rpx auto;
+}
+
+.btnSf button {
+  background: #57b6ba;
   color: #fff;
+}
+
+.btnSf button:active {
+  background: #5bc2c6;
+  color: #fff;
+}
+
+image{
+  height: 60rpx;
+  width: 60rpx;
+  display: inline-block
+}
+
+.star_view {
+  margin-top:30px;
+  margin-left: 10rpx;
+  font-size: 40rpx;
 }
