--- a/page/home/pages/all-work-orders/all-work-orders.wxml
+++ b/page/home/pages/all-work-orders/all-work-orders.wxml
@@ -3,7 +3,7 @@
     <mp-searchbar bindselectresult="selectResult" search="{{search}}"></mp-searchbar>
           <scroll-view scroll-y="true" class="container discovery" bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
         <mp-cells>
-            <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}" bindtap="clickOrder">
+            <mp-cell wx:for="{{orderList}}" wx:for-item="order" wx:key="order" data-id="{{order.id}}" bindtap="clickOrder">
                 <view slot="title" style="position: relative;margin-right: 10px;">
                   <image src="/imgs/icon/to_be_confirmed.png" style="width: 50px; height: 50px; display: block"/>
                 </view>
