--- a/page/home/pages/terminalUser/repair/repair.wxml
+++ b/page/home/pages/terminalUser/repair/repair.wxml
@@ -1,21 +1,6 @@
 <view class="container">
   <view class="page-body">
-    <!--选择项目栏-->
-    <!-- <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">选择项目</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickChoosePro" value="{{programIndex}}" range="{{programList}}">
-              <view class="weui-input">{{programList[programIndex]}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view> -->
-    <!--语音报修栏-->
+      <!--语音报修栏-->
     <!-- <view class="page-section">
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_switch">
@@ -40,6 +25,7 @@
         </view>
       </block>
     </view> -->
+    <!--选择项目栏-->
     <view class="page-section">
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
@@ -47,11 +33,60 @@
             <view class="weui-label">项目</view>
           </view>
           <view class="weui-cell__bd">
-            <view class="weui-input">{{program}}</view>
+            <picker bindchange="clickChoosePro" value="{{programIndex}}" range="{{programNameList}}">
+              <view class="weui-input">{{programNameList[programIndex]}}</view>
+            </picker>
           </view>
         </view>
       </view>
     </view>
+
+     <!--选择服务商栏-->
+    <view class="page-section">
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">服务商</view>
+          </view>
+          <view class="weui-cell__bd">
+            <!-- <picker bindchange="clickServiceProvider" value="{{serviceProviderIndex}}" range="{{serviceProviderList}}"> -->
+              <view class="weui-input">{{serviceProvider}}</view>
+            <!-- </picker> -->
+          </view>
+        </view>
+      </view>
+    </view>
+
+     <!--选择审核人-->
+    <view class="page-section">
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">审核人</view>
+          </view>
+          <view class="weui-cell__bd">
+            <!-- <picker bindchange="clickChoosereviewer" value="{{reviewerIndex}}" range="{{reviewerList}}"> -->
+              <view class="weui-input">{{reviewer}}</view>
+            <!-- </picker> -->
+          </view>
+        </view>
+      </view>
+    </view>
+
+    <!--联系电话栏-->
+    <view class="page-section">
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">联系电话</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" type="number" value="{{phoneNumber}}" bindinput="setPhoneNumber"/>
+          </view>
+        </view>
+      </view>
+    </view>
+
     <!--日期选择器-->
     <view class="page-section">
       <view class="weui-cells weui-cells_after-title">
@@ -67,22 +102,6 @@
           <view class="weui-cell__bd">
             <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
               <view class="weui-input">{{time}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view>
-
-    <!--选择服务商栏-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">选择服务商</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickServiceProvider" value="{{serviceProviderIndex}}" range="{{serviceProviderList}}">
-              <view class="weui-input">{{serviceProviderList[serviceProviderIndex]}}</view>
             </picker>
           </view>
         </view>
@@ -105,22 +124,6 @@
       </view>
     </view>
 
-    <!--选择审核人-->
-    <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">审核人</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="clickChoosereviewer" value="{{reviewerIndex}}" range="{{reviewerList}}">
-              <view class="weui-input">{{reviewerList[reviewerIndex]}}</view>
-            </picker>
-          </view>
-        </view>
-      </view>
-    </view>
-
     <!--报修人栏-->
     <!-- <view class="page-section">
       <view class="weui-cells weui-cells_after-title">
@@ -130,19 +133,6 @@
           </view>
           <view class="weui-cell__bd">
             <view class="weui-input">{{repairer}}</view>
-          </view>
-        </view>
-      </view>
-    </view> -->
-    <!--联系电话栏-->
-    <!-- <view class="page-section">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">联系电话</view>
-          </view>
-          <view class="weui-cell__bd">
-            <input class="weui-input" type="number" placeholder="{{phoneNumber}}" bindinput="setPhoneNumber"/>
           </view>
         </view>
       </view>
